# Atomic-Path

./: .gitignore  CMakeLists.txt  Main.qml  README.md  habitmanager.cpp  habitmanager.h  main.cpp
Assets.xcassets/AppIcon.appiconset/: Contents.json
